fix pytest